Sex to Felix expression converter
git-svn-id: https://felix.svn.sourceforge.net/svnroot/felix/felix/trunk@1490 3fca3a5c-071c-0410-b500-ba939811c8f2

--- a/sandbox/sex/Makefile
+++ b/sandbox/sex/Makefile
@@ -7,11 +7,12 @@ all:
 	ocamlopt  -c sex_types.ml
 	ocamlopt  -c sex_print.ml
 	ocamlopt  -c sex_map.ml
+	ocamlopt -I ../../src -c sex2flx.ml
 	ocamlopt -I ../../dypgen/dyplib -c sex_parse.ml
 	ocamlopt -I ../../dypgen/dyplib -c sex_lex.ml
-	ocamlopt -a -o sex.cmxa sex_types.cmx sex_print.cmx sex_map.cmx sex_parse.cmx sex_lex.cmx 
-	ocamlopt -c sex.ml
-	ocamlopt -o sex ../../dypgen/dyplib/dyplib.cmxa sex.cmxa sex.cmx
+	ocamlopt -a -o sex.cmxa sex_types.cmx sex_print.cmx sex_map.cmx sex2flx.cmx sex_parse.cmx sex_lex.cmx 
+	ocamlopt -I ../../src -c sex.ml
+	ocamlopt -o sex nums.cmxa ../../dypgen/dyplib/dyplib.cmxa ../../src/flxlib.cmxa sex.cmxa sex.cmx
 clean:
 	rm -f *.a *.o *.cmi *.cmx *.cmxa *.ml *.mli *.dyp *.mll *.cache sex tmp.tmp *.sex
 
