--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "src/compiler/ocs"]
 	path = src/compiler/ocs
 	url = git://github.com/erickt/ocs.git
+[submodule "re2"]
+	path = re2
+	url = git@github.com:skaller/re2.git
