Fix some minor buglets, stuff builds with felix version of re2 now.

--- a/src/re2/re2.fpc.in
+++ b/src/re2/re2.fpc.in
@@ -2,5 +2,5 @@ Name: Re2
 Description: Google Re2 regexp library
 provides_dlib: @SHARED_LIB@
 provides_slib: @STATIC_LIB@
-includes: @INCLUDES@
+includes: '@INCLUDES@'
 
