--- a/.gitmodules
+++ b/.gitmodules
@@ -8,5 +8,5 @@
 	path = src/compiler/ocs
 	url = git://github.com/erickt/ocs.git
 [submodule "re2"]
-	path = re2
+	path = src/re2/re2
 	url = git@github.com:skaller/re2.git
