--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "re2"]
 	path = src/re2/re2
 	url = git://github.com/skaller/re2.git
+[submodule "src/tre/tre"]
+	path = src/tre/tre
+	url = git://github.com/erickt/tre.git
