--- a/src/sdl/sdl.fpc.in
+++ b/src/sdl/sdl.fpc.in
@@ -5,3 +5,5 @@ cflags: @CFLAGS@
 requires_dlibs: @SHARED_LIBS@
 requires_slibs: @STATIC_LIBS@
 flx_requires_driver: flx_arun
+includes: '"SDL.h"' '"SDL_opengl.h"'
+requires: gl glu glut glext
