Add some more ignores.

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,19 @@ mydb.db
 tmp.txt
 tmp.out
 ocamlprof.dump
+*.os
+*.ctors_cpp
+*.dep
+*.rtti
+*.resh
+*.exe
+*.os
+*.ctors_cpp
+*.dep
+*.rtti
+*.resh
+*.exe
+*.stdout
+*.a
+automaton.syntax
+
