--- a/.gitignore
+++ b/.gitignore
@@ -34,4 +34,9 @@ ocamlprof.dump
 *.stdout
 *.a
 automaton.syntax
+test/*/*/*.cpp
+test/*/*/*.hpp
+test/*/*/*.includes
+*.includes
+!src/flx_pkgconfig/flx_pkgconfig.includes
 
