DB updates for new wiki

--- a/demos/wiki/config/server_config.cfg
+++ b/demos/wiki/config/server_config.cfg
@@ -4,7 +4,13 @@ port=8080
 server_root=.
 document_root=$server_root/html
 C_PATH = $INSTALL_ROOT/lib/rtl,/usr/local/include,/usr/include,/usr/include/c++/4.6.2,/usr/local/include,/usr/include,/usr/include/c++/4.2.1,/usr/include/c++/4.2.1/x86_64-apple-darwin10,/usr/include/c++/4.4.3,/usr/include/c++/4.4.3/x86_64-linux-gnu,/usr/lib/gcc/x86_64-linux-gnu/4.4.3/include
+XFLX_PATH=$INSTALL_ROOT/lib
+XFDOC_PATH=$INSTALL_ROOT/doc,$INSTALL_ROOT/web
+XFLX_PKGCONFIG=$INSTALL_ROOT/config
+DOCS=/home/mmaul/hacking/felix/fork/felix/src
 FLX_PATH=$INSTALL_ROOT/lib
-FDOC_PATH=$INSTALL_ROOT/doc,$INSTALL_ROOT/web
+FDOC_PATH=$DOCS,$DOCS/doc,$DOCS/web
 FLX_PKGCONFIG=$INSTALL_ROOT/config
 DB = $server_root/db/wiki.db
+WIKI_ROOT=$server_root/wiki
+TEMPLATE_ROOT=$server_root/html
