Now using fdoc redering plugins

--- a/src/wiki/config/server_config.cfg
+++ b/src/wiki/config/server_config.cfg
@@ -10,3 +10,15 @@ FLX_PKGCONFIG=$INSTALL_ROOT/config
 DB = $server_root/db/wiki.db
 WIKI_ROOT=$server_root/content
 TEMPLATE_ROOT=$server_root/html
+extension flx -> flx2html::xlat_felix
+extension flxh -> flx2html::xlat_felix
+extension c     -> cpp2html::xlat_cpp
+extension cpp   -> cpp2html::xlat_cpp
+extension cxx   -> cpp2html::xlat_cpp
+extension h     -> cpp2html::xlat_cpp
+extension hpp   -> cpp2html::xlat_cpp
+extension fpc  -> fdoc2html::xlat_fpc
+extension fdoc  -> fdoc2html::xlat_fdoc
+extension ml    -> ocaml2html::xlat_ocaml
+extension mli   -> ocaml2html::xlat_ocaml
+extension py    -> py2html::xlat_py
