Added support for git backing of wiki content

--- a/src/wiki/config/server_config.cfg
+++ b/src/wiki/config/server_config.cfg
@@ -10,6 +10,14 @@ FLX_PKGCONFIG=$INSTALL_ROOT/config
 DB = $server_root/db/wiki.db
 WIKI_ROOT=$server_root/content
 TEMPLATE_ROOT=$server_root/html
+#Enable git backing of wiki content by uncommenting below
+# Requires WIKI_ROOT reference a git repository
+# If repository is remote requires either unsigned ssh key
+# or ssh_agent
+# for remote repository set git = remote
+# for local repository set git = local
+#git=local
+#git=remote
 extension flx -> flx2html::xlat_felix
 extension flxh -> flx2html::xlat_felix
 extension c     -> cpp2html::xlat_cpp
