Added remote option for git

--- a/src/wiki/config/server_config.cfg
+++ b/src/wiki/config/server_config.cfg
@@ -9,7 +9,9 @@ FDOC_PATH=$DOCS,$DOCS/doc,$DOCS/web
 FLX_PKGCONFIG=$INSTALL_ROOT/config
 DB = $server_root/db/wiki.db
 WIKI_ROOT=$server_root/content
+GIT_ROOT=wiki
 TEMPLATE_ROOT=$server_root/html
+info_log=wiki.log
 #Enable git backing of wiki content by uncommenting below
 # Requires WIKI_ROOT reference a git repository
 # If repository is remote requires either unsigned ssh key
