C_PATH in server config now in plugin compitible format Typo in wiki_handler.flx

--- a/src/wiki/config/server_config.cfg
+++ b/src/wiki/config/server_config.cfg
@@ -3,7 +3,15 @@ delay=0.05
 port=8080
 server_root=.
 document_root=$server_root/html
-C_PATH = $INSTALL_ROOT/lib/rtl,/usr/local/include,/usr/include,/usr/include/c++/4.6.2,/usr/local/include,/usr/include,/usr/include/c++/4.2.1,/usr/include/c++/4.2.1/x86_64-apple-darwin10,/usr/include/c++/4.4.3,/usr/include/c++/4.4.3/x86_64-linux-gnu,/usr/lib/gcc/x86_64-linux-gnu/4.4.3/include
+C_PATH += /usr/include/c++/4.2.1
+C_PATH += /usr/include/c++/4.2.1/x86_64-apple-darwin10
+C_PATH += /usr/include/c++/4.4.3
+C_PATH += /usr/include/c++/4.4.3/x86_64-linux-gnu
+C_PATH += /usr/include/c++/4.6.2
+C_PATH += /usr/include/c++/4.6.2/x86_64-linux-gnu
+C_PATH +=/usr/local/include
+C_PATH +=/usr/include
+C_PATH += /usr/lib/gcc/x86_64-linux-gnu/4.4.3/include
 FLX_PATH=$INSTALL_ROOT/lib
 FDOC_PATH=$DOCS,$DOCS/doc,$DOCS/web
 FLX_PKGCONFIG=$INSTALL_ROOT/config
@@ -20,14 +28,14 @@ info_log=wiki.log
 # for local repository set git = local
 #git=local
 #git=remote
-extension flx -> flx2html::xlat_felix
-extension flxh -> flx2html::xlat_felix
+extension flx   -> flx2html::xlat_felix
+extension flxh  -> flx2html::xlat_felix
 extension c     -> cpp2html::xlat_cpp
 extension cpp   -> cpp2html::xlat_cpp
 extension cxx   -> cpp2html::xlat_cpp
 extension h     -> cpp2html::xlat_cpp
 extension hpp   -> cpp2html::xlat_cpp
-extension fpc  -> fdoc2html::xlat_fpc
+extension fpc   -> fdoc2html::xlat_fpc
 extension fdoc  -> fdoc2html::xlat_fdoc
 extension ml    -> ocaml2html::xlat_ocaml
 extension mli   -> ocaml2html::xlat_ocaml
