Creation of wiki config file when file does not exist Start up of wiki without arguments, defaults to configuration,DB and log in $HOME/.felix/wiki wiki content in INSTALL_ROOT/wiki/content templates in INSTALL_ROOT/wiki/heml

--- a/src/wiki/config/server_config.cfg
+++ b/src/wiki/config/server_config.cfg
@@ -16,9 +16,10 @@ C_PATH += /usr/local/lib/felix/felix-1.1.7dev/lib/rtl
 FLX_PATH += /usr/local/lib/felix/felix-1.1.7dev/lib
 FLX_PKGCONFIG_PATH += /usr/local/lib/felix/felix-1.1.7dev/config
 DB = $server_root/db/wiki.db
-WIKI_ROOT=$server_root/content
+WIKI_ROOT=$INSTALL_ROOT/wiki/content
+#WIKI_ROOT=$server_root/content
 GIT_ROOT=wiki
-TEMPLATE_ROOT=$server_root/html
+TEMPLATE_ROOT=$INSTALL_ROOT/wiki/html
 info_log=wiki.log
 #Enable git backing of wiki content by uncommenting below
 # Requires WIKI_ROOT reference a git repository
