--- a/src/wiki/config/server_config.cfg
+++ b/src/wiki/config/server_config.cfg
@@ -12,6 +12,7 @@ C_PATH += /usr/include/c++/4.6.2/x86_64-linux-gnu
 C_PATH +=/usr/local/include
 C_PATH +=/usr/include
 C_PATH += /usr/lib/gcc/x86_64-linux-gnu/4.4.3/include
+C_PATH += /usr/local/lib/felix/felix-1.1.7dev/lib/rtl
 FLX_PATH += /usr/local/lib/felix/felix-1.1.7dev/lib
 FLX_PKGCONFIG_PATH += /usr/local/lib/felix/felix-1.1.7dev/config
 DB = $server_root/db/wiki.db
