Fix the fpc crashing bug.
Duh .. the config file specified to call xlat_fpc
in library fdoc2html.. so we should have got an exception
thrown (not a crash). Hard to tell at the moment why this
didn't appear to happen (it may have happened, and it's just
crappy error reporting translating to an abort() or something).

--- a/src/wiki/config/server_config.cfg
+++ b/src/wiki/config/server_config.cfg
@@ -35,7 +35,7 @@ extension cpp   -> cpp2html::xlat_cpp
 extension cxx   -> cpp2html::xlat_cpp
 extension h     -> cpp2html::xlat_cpp
 extension hpp   -> cpp2html::xlat_cpp
-extension fpc   -> fdoc2html::xlat_fpc
+extension fpc   -> fpc2html::xlat_fpc
 extension fdoc  -> fdoc2html::xlat_fdoc
 extension ml    -> ocaml2html::xlat_ocaml
 extension mli   -> ocaml2html::xlat_ocaml
